--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -4,14 +4,14 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@book{hohpewoolf2003,
+@misc{hohpewoolf2003,
 	author = "Gregor Hohpe, Bobby Woolf",
 	title = "Enterprise Integration Patterns: Designing, Building, and Deploying Messaging Solutions",
 	year = 2003,
 	publisher = "Addison Wesley"
 }
 
-@book{chappell2004,
+@misc{chappell2004,
 	author= "David A. Chappell",
 	title = "Enterprise Service Bus: Theory in Practice",
 	year = 2004,
@@ -19,70 +19,70 @@
 
 }
 
-@book{gaikwad2010,
+@misc{gaikwad2010,
 	author = "Santosh Gaikwad, Bharti Gawali, Pravin Yannawar",
 	title = "A Review on Speech Recognition Technique",
 	year = 2010,
 	publisher = "International Journal of Computer Applications November 2010"
 }
 
-@book{douglas2002,
+@misc{douglas2002,
 	author = "Douglas A. Reynolds",
 	title = "An Overview of Automatic Speaker Recognition Technology",
 	year = 2002,
 	publisher = "IEEE International Conference"
 }
 
-@book{noor2005,
+@misc{noor2005,
 	author = "Nawsher Ahmed Noor",
-	title = "BANGLA OPTICAL CHARACTER RECOGNITION",
+	title = "Bangla Optical Character Recognition",
 	year = 2005,
 	publisher = "Department of Computer Science and Engineering of BRAC University"
 }
 
-@book{adamsresnik1997,
+@misc{adamsresnik1997,
 	author= "Philip Resnik, Gary Adams",
 	title = "A Language Identification Application Built on the Java Client/Server Platform",
 	year = 1997,
 	publisher = "Department of Linguistics and UMIACS University of Maryland"
 }
 
-@book{rehurek2009,
+@misc{rehurek2009,
 	author = "Radim Rehurek, Milan Kolkus",
 	title = "Language Identi?cation on the Web: Extending the Dictionary Method",
 	year = 2009,
 	publisher = "Masaryk University in Brno"
 }
 
-@book{fielding2000,
+@misc{fielding2000,
 	author = "Roy Thomas Fielding",
 	title = "chapter 5 from Architectural Styles and the Design of Network-based Software Architectures",
 	year = 2000,
 	publisher = "University Of California, Irvine"
 }
 
-@book{hohpe2003,
+@misc{hohpe2003,
 	author = "Gregor Hohpe, Bobby Woolf",
 	title = "Enterprise Integration Patterns: Designing, Building, and Deploying Messaging Solutions",
 	year = 2003,
 	publisher = "Addison-Wesley Professional"
 }
 
-@book{ibsen2010,
+@misc{ibsen2010,
 	author = "Claus Ibsen, Jonathan Anstey",
 	title = "Camel in Action",
 	year = 2010,
 	publisher = "Manning Publications"
 }
 
-@book{bloch2008,
+@misc{bloch2008,
 	author = "Joshua Bloch",
 	title = "Effective Java (2nd Edition)",
 	year = 2008,
 	publisher = "Addison-Wesley"
 }
 
-@book{gamma1995,
+@misc{gamma1995,
 	author = "Erich Gamma, Richard Helm, Ralph Johnson, John M. Vlissides",
 	title ="Design Patterns: Elements of Reusable Object-Oriented Software",
 	year = 1995,
@@ -90,18 +90,24 @@
 }
 
 
-@book{hall2011,
+@misc{hall2011,
 	author = "Richard Hall, Karl Pauls, Stuart McCulloch, David Savage ",
 	title ="OSGi in Action: Creating Modular Applications in Java",
 	year = 2011,
 	publisher = "Manning Publications"
 }
 
-@book{och2003,
-	authot = "Franz Josef Och",
+@misc{och2003,
+	author = "Franz Josef Och",
 	title = "Statistical Phrase-Based Translation",
 	year = 2003,
 	publisher = "University of Southern California"
+}
+
+@misc{ldaprfc1996, 
+	title = "A String Representation of LDAP Search Filters",
+	author = "T. Howes",
+	year = 1996
 }
 
 @misc{camel2012,
@@ -114,13 +120,6 @@
 	title = "strona domowa JAXB",
 	howpublished = "\url{http://jaxb.java.net}",
 	year = 2008
-}
-
-@misc{ldaprfc1996, 
-	title = "A String Representation of LDAP Search Filters",
-	author = "T. Howes",
-	howpublished = "\url{http://www.ietf.org/rfc/rfc1960.txt.}",
-	year = 1996
 }
 
 @misc{eaipatterns, 
@@ -165,19 +164,3 @@
 	howpublished = "\url{http://www.pediaphon.org}",
 	year = 2011
 }
-
-@article{name06,
-	Author = {Name},
-	Date-Added = {2007-09-06 11:30:06 +0200},
-	Date-Modified = {2007-09-06 11:30:42 +0200},
-	Journal = {Journal of Sth},
-	Title = {Title 2 2 2 2 },
-	Year = {2006}}
-
-@article{lastname07,
-	Author = {Lastname},
-	Date-Added = {2007-09-06 11:28:24 +0200},
-	Date-Modified = {2007-09-06 11:29:24 +0200},
-	Journal = {Journal of Sth},
-	Title = {Title},
-	Year = {2007}}
